# pengui-ball

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  LICENSE-EXCEPTIONS  README.md  compose.yml  config.yaml  justfile
.cargo/: config.toml
.github/workflows/: docker.yml
assets/: README.md
assets/css/: .gitignore  badge_tools.css  home.css  shared.css
assets/data/: ynoengine-simd.js
common/: Cargo.toml
common/src/: config.rs  lib.rs
common/src/messages/: engine.rs  mod.rs  play.rs
components/locations/: Cargo.toml
components/locations/src/: lib.rs
components/locations/src/resolver/: classic.rs  mod.rs
config/: config.yaml  menu_themes.yaml  themes.yaml
js/: pengui-ball.user.js
nginx/: nginx.conf
pages/badge_tools/: Cargo.toml
pages/badge_tools/src/: lib.rs
pages/chat/: Cargo.toml
pages/chat/src/parser/: mod.rs  options.rs  tests.rs
pages/engine/: Cargo.toml  build.rs
pages/engine/src/: callbacks.rs  easyrpg.rs  lib.module.css  lib.rs  messages.rs  state.rs
pages/engine/src/easyrpg/: callbacks.rs  files.rs  messages.rs  mod.rs
pages/engine/src/easyrpg/state/: configuration.rs  mod.rs
pages/engine/src/effects/: events.rs  mod.rs  save_timestamps.rs  volume.rs
pages/engine/src/effects/events/: error.rs  focus.rs  mod.rs
pages/engine/src/state/: easyrpg_player.rs  mod.rs
pages/engine/src/state/easyrpg/: bindings.rs  configuration.rs  mod.rs
pages/home/: Cargo.toml  build.rs
pages/home/src/: door.module.css  door.rs  doors.module.css  doors.rs  lib.module.css  lib.rs
pages/play/: Cargo.toml  build.rs
pages/play/src/: layout.module.css  layout.rs  lib.module.css  lib.rs  messages.rs  state.rs
pages/play/src/components/: mod.rs  scroller.module.css  scroller.rs  tabs.module.css  tabs.rs
pages/play/src/game/: messages.rs  mod.module.css  mod.rs
pages/play/src/game/controls/: buttons.rs  full_screen.rs  icon.rs  maps.rs  mod.module.css  mod.rs  mute.rs
pages/play/src/game/controls/buttons/: full_screen.rs  maps.rs  modal.rs  mute.rs  private.module.css  private.rs  toggle_chat.rs
pages/play/src/game/messages/: mod.rs  player.rs  save.rs
pages/play/src/header/: logo.module.css  logo.rs  mod.module.css  mod.rs
pages/play/src/modals/: cors.rs  login.rs  logout.rs  mod.module.css  mod.rs  saves.module.css  saves.rs  screenshots.module.css  screenshots.rs  themes.module.css  themes.rs
pages/play/src/modals/expeds/: mod.module.css  mod.rs  types.rs
pages/play/src/sidebar/: location.rs  mod.module.css  mod.rs  player_count.module.css  player_count.rs  session.rs  tabs.module.css  tabs.rs
pages/play/src/sidebar/chat/: filters.module.css  filters.rs  input.module.css  input.rs  menu_themes.rs  message.module.css  message.rs  mod.module.css  mod.rs  state.rs
pages/play/src/sidebar/chat/input/: destination.module.css  destination.rs  guest_name.module.css  guest_name.rs  mod.module.css  mod.rs  text_box.module.css  text_box.rs
pages/play/src/sidebar/chat/message/: author.module.css  author.rs  icons.rs  location.rs  mod.module.css  mod.rs  types.rs
pages/play/src/sidebar/chat/message/components/: global.rs  map.rs  mod.rs  party.rs  sending.rs
pages/play/src/sidebar/chat/message/components/helpers/: chat_message.rs  mod.rs  parser.rs
pages/play/src/sidebar/chat/message/components/helpers/parser/: emoji.module.css  mod.rs  options.rs  token.rs
pages/play/src/sidebar/chat/message/types/: global.rs  map.rs  party.rs  sending.rs
pages/play/src/sidebar/players/: friends.module.css  friends.rs  map.rs  mod.module.css  mod.rs
pages/play/src/sidebar/players/components/: badge.rs  medals.rs  mod.rs
pages/play/src/sidebar/session/: command.rs  handler.rs  mod.module.css  mod.rs  state.rs  status.module.css  status.rs
pages/play/src/sidebar/session/handler/: chat.rs  mod.rs
pages/play/src/state/: chat.rs  config.rs  engine.rs  game.rs  message.rs  mod.rs  player.rs  user.rs
pages/play/src/state/api/: location.rs  locations.rs  mod.rs  screenshots.rs  user.rs
pages/play/src/state/api/locations/: classic.rs  explorer.rs  mod.rs
pages/play/src/state/chat/: channel.rs  destination.rs  message.rs  mod.rs
pages/play/src/states/: locations.rs  mod.rs
pages/play/src/states/interfaces/: emojis.rs  mod.rs
pages/play/src/states/locations/: location.rs  mod.rs
pages/play/src/states/locations/resolver/: classic.rs  explorer.rs  mod.rs
pages/play/src/states/players/: friend.rs  mod.rs  player.rs
scripts/: convert-menu-themes.js
server/: Cargo.toml
server/src/: config.rs  main.rs  theme_compiler.rs
server/src/serve/: config.rs  mod.rs
server/src/theme_compiler/: gradient.rs  mod.rs  shadow.rs
shared/: Cargo.toml  build.rs
shared/src/: app.module.css  app.rs  config.rs  lib.module.css  lib.rs  macros.rs
shared/src/pages/: error_404.rs  mod.rs
shared/src/pages/game/: mod.module.css  mod.rs  session.rs  state.rs
shared/src/pages/game/sidebar/: mod.rs  session.rs
shared/src/pages/home/: door.module.css  door.rs  doors.rs  index.module.css  mod.module.css  mod.rs
shared/src/pages/player/: callbacks.rs  easyrpg.rs  mod.module.css  mod.rs
