[workspace]
resolver = "3"
members = ["server", "shared"]

[workspace.lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[profile.wasm-release]
inherits = "release"
strip = "symbols"
opt-level = 'z'
lto = true
panic = "abort"

[workspace.dependencies]
leptos = { version = "0.8.15", features = ["nightly", "islands"] }
leptos_meta = "0.8.5"
leptos_router = { version = "0.8.11", features = ["nightly"] }
serde = { version = "1", features = ["derive"] }

[[workspace.metadata.leptos]]
name = "pengui-ball"

bin-package = "server"
bin-features = ["ssr"]
lib-package = "shared"
lib-features = ["hydrate"]
lib-profile-release = "wasm-release"

site-addr = "127.0.0.1:3000"
site-root = "target/site"
site-pkg-dir = "pkg"
assets-dir = "assets"

style-file = "target/bundle.css"
browserquery = "fully supports wasm and fully supports webgl2"
js-minify = true
disable-server-fn_hash = true
