[workspace]
resolver = "3"
members = ["common", "pages/*", "server", "shared"]

[workspace.lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
needless_pass_by_value = { level = "allow" }
must_use_candidate = { level = "allow" }
missing_panics_doc = { level = "allow" }

[profile.wasm-release]
inherits = "release"
strip = "symbols"
opt-level = 'z'
lto = true
panic = "abort"

[workspace.dependencies]
leptos = { version = "0.8.15", features = ["nightly", "islands"] }
leptos_router = { version = "0.8.11", features = ["nightly"] }
leptos_meta = "0.8.5"
leptos-use = "0.18.0"
serde = { version = "1", features = ["derive"] }
stylance = "0.7.4"
stylance-cli = "0.7.4"
wasm-bindgen = "=0.2.106"
web-sys = "*"

[[workspace.metadata.leptos]]
name = "pengui-ball"

bin-package = "server"
bin-features = ["ssr"]
lib-package = "shared"
lib-features = ["hydrate"]
lib-profile-release = "wasm-release"

site-addr = "127.0.0.1:3000"
site-root = "target/site"
site-pkg-dir = "pkg"
assets-dir = "assets"

browserquery = "fully supports wasm and fully supports webgl2"
js-minify = true
disable-server-fn-hash = true
