[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
common.path = "../common"
console_error_panic_hook = { version = "0.1", optional = true }
engine.path = "../pages/engine"
futures-channel = "0.3.31"
futures-util = "0.3.31"
home.path = "../pages/home"
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos-use.workspace = true
serde.workspace = true
stylance.workspace = true
wasm-bindgen.workspace = true
web-sys = "*"

[features]
hydrate = ["dep:console_error_panic_hook", "leptos/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "leptos-use/ssr"]

[build-dependencies]
stylance-cli.workspace = true
