[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos-use.workspace = true
wasm-bindgen.workspace = true

# local crates
engine.path = "../pages/engine"
home.path = "../pages/home"
play.path = "../pages/play"

[features]
hydrate = ["dep:console_error_panic_hook", "leptos/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "leptos-use/ssr"]

[build-dependencies]
stylance-cli.workspace = true
