[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
common.path = "../../common"
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
send_wrapper = "0.6.0"
serde.workspace = true
stylance.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures = "0.4.56"
web-sys = "*"

[build-dependencies]
stylance-cli.workspace = true

[lints]
workspace = true
