[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
idb = "0.6.5"
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
serde.workspace = true
serde-wasm-bindgen.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures = "0.4.56"

common.path = "../../common"
