[package]
name = "play"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
common.path = "../../common"
flume = "0.12.0"
indexmap = "2.13.0"
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos-use.workspace = true
serde.workspace = true
strum = { version = "0.27.2", features = ["derive"] }
stylance.workspace = true
chrono = "0.4.43"
gloo-net = { version = "0.6.0", default-features = false, features = [
    "http",
    "json",
    "serde",
    "serde_json",
] }

[build-dependencies]
stylance-cli.workspace = true
