[package]
name = "play"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
chrono = "0.4.43"
common.path = "../../common"
flume = "0.12.0"
gloo-file = { version = "0.3.0", features = ["futures"] }
gloo-net = { version = "0.6.0", default-features = false, features = [
    "http",
    "json",
] }
indexmap = "2.13.0"
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos-use.workspace = true
serde.workspace = true
serde-wasm-bindgen.workspace = true
strum = { version = "0.27.2", features = ["derive"] }
strsim = "0.11.1"
stylance.workspace = true
thiserror = "2.0.18"

[build-dependencies]
stylance-cli.workspace = true
