[package]
name = "play"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
common.path = "../../common"
flume = "0.12.0"
gloo-file = { version = "0.3.0", features = ["futures"] }
gloo-net = { version = "0.6.0", default-features = false, features = [
    "http",
    "json",
] }
indexmap = "2.13.0"
itertools = "0.14.0"
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos-use.workspace = true
logos = "0.16.1"
reactive_stores = "0.4.2"
serde.workspace = true
serde_json = "1.0.149"
serde-wasm-bindgen.workspace = true
strum = { version = "0.28", features = ["derive"] }
strsim = "0.11.1"
stylance.workspace = true
thiserror = "2.0.18"
wasm-bindgen = "*"

[build-dependencies]
stylance-cli.workspace = true
